--- a/live/apps/mlflow/20-deployment.yaml
+++ b/live/apps/mlflow/20-deployment.yaml
@@ -13,6 +13,8 @@ spec:
       app: mlflow
   template:
     metadata:
+      annotations:
+        Component: k8s_svc
       labels:
         app: mlflow
     spec:
@@ -34,7 +36,7 @@ spec:
           --backend-store-uri $(BACKEND_STORE_URI)
           --serve-artifacts
           --default-artifact-root mlflow-artifacts:/
-          --artifacts-destination /tmp/artifacts"
+          --artifacts-destination s3://$(MLFLOW_ARTIFACTS_BUCKET_NAME)"
         resources:
           requests:
             cpu: "0.5"
@@ -45,6 +47,8 @@ spec:
         envFrom:
         - secretRef:
             name: "mlflow"
+        - configMapRef:
+            name: "iac-config"
         env:
         - name: "DB_HOSTNAME"
           valueFrom:
