--- a/live/apps/mlflow/40-service.yaml
+++ b/live/apps/mlflow/40-service.yaml
@@ -2,8 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mlflow
+  namespace: apps
   labels:
     app: mlflow
+  annotations:
+    alb.ingress.kubernetes.io/healthcheck-path: /health
 spec:
   type: NodePort
   ports:
