--- a/live/apps/airflow/values.yaml
+++ b/live/apps/airflow/values.yaml
@@ -37,10 +37,10 @@ webserver:
 
   resources:
     limits:
-      cpu: "0.5"
+      cpu: "0.75"
       memory: "1.75Gi"
     requests:
-      cpu: "0.5"
+      cpu: "0.75"
       memory: "1.75Gi"
 
 scheduler:
@@ -67,8 +67,28 @@ workers:
     failureThreshold: 6
   resources:
     limits:
-      cpu: "0.5"
+      cpu: "0.75"
       memory: "1.75Gi"
     requests:
-      cpu: "0.5"
+      cpu: "0.75"
       memory: "1.75Gi"
+
+dags:
+  persistence:
+    enabled: false
+  gitSync:
+    enabled: true
+    repo: git@github.com:cloudership/showcase_airflow_dags.git
+    branch: master
+    subPath: ""
+    sshKeySecret: airflow-gitsync
+    knownHosts: |-
+      github.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIOMqqnkVzrm0SdG6UOoqKLsabgH5C9okWi0dh2l9GKJl
+
+    resources:
+      limits:
+        cpu: "0.25"
+        memory: "1Gi"
+      requests:
+        cpu: "0.25"
+        memory: "1Gi"
